--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.1",
     "method-override": "^3.0.0",
     "pg": "^7.12.1",
-    "superagent": "^5.1.0"
+    "superagent": "^5.1.0",
+    "xml-js": "^1.6.11"
   }
 }
